<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UmMainActivity">

    <TextView
        android:id="@+id/tvUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv2_text"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvUser"
        app:layout_constraintStart_toEndOf="@+id/tvUser"
        app:layout_constraintTop_toTopOf="@+id/tvUser" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvData_text"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv2"
        app:layout_constraintStart_toEndOf="@+id/tv2"
        app:layout_constraintTop_toTopOf="@+id/tv2" />

    <TextView
        android:id="@+id/tvPoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvDate"
        app:layout_constraintStart_toEndOf="@+id/tvDate"
        app:layout_constraintTop_toTopOf="@+id/tvDate" />

    <Button
        android:id="@+id/btnMypage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/btnMypage_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUser" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="@+id/btnMypage"
        app:layout_constraintStart_toEndOf="@+id/btnMypage"
        app:layout_constraintTop_toTopOf="@+id/btnMypage" />
</androidx.constraintlayout.widget.ConstraintLayout>